[build-system]
requires = [
    "setuptools >= 40.0.4",
    # since this isn't built into a wheel yet the below isn't needed
    # "wheel >= 0.29.0",
]
build-backend = 'setuptools.build_meta'

[tool.pylint.'MESSAGES CONTROL']
# Disable the message, report, category or checker with the given id(s). You
# can either give multiple identifiers separated by comma (,) or put this
# option multiple times (only on the command line, not in the configuration
# file where it should appear only once). You can also use "--disable=all" to
# disable everything first and then reenable specific checks. For example, if
# you want to run only the similarities checker, you can use "--disable=all
# --enable=similarities". If you want to run only the classes checker, but have
# no Warning level messages displayed, use "--disable=all --enable=classes
# --disable=W".
# Disable these checks; prefer black formatting
disable=""",
      bad-continuation,
      fixme,
      line-too-long,
      useless-object-inheritance,
"""
# [tool.pylint.'BASIC']
# # Good variable names which should always be accepted, separated by a comma.
# good-names=""",
#       polly-merge,
# """
